# linebot_openai

./: .gitignore  Dockerfile  Procfile  README.md  app.py  celery_config.py  celery_worker.py  config.py  docker-compose.yml  message_response.py  poetry_requirements.txt  pyproject.toml  requirements.txt  run_spiders.py  scrapy.cfg  scrapy_runner.py  setup.py  stock_list  stock_response.py  test.py
scrapy_proj/: run_spiders.py
scrapy_proj/yahoo_news/: items.py  middlewares.py  settings.py
scrapy_proj/yahoo_news/spiders/: news_search.py
utils/: extract_data.py  logger.py
worker/: celery_worker.py  scrapy_runner.py
yahoo_news/: items.py  pipelines.py  runner.py  scrapy.cfg  settings.py
yahoo_news/spiders/: news_search.py
yahoo_news/yahoo_news/: items.py  middlewares.py  pipelines.py  settings.py
yahoo_news/yahoo_news/spiders/: news_search.py
