[tool.poetry]
name = "linebot-openai"
version = "0.1.0"
description = ""
authors = ["Cheng-Hsun, Hsu <a10121555@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
line-bot-sdk = "^3.13.0"
flask = "^3.0.3"
openai = "^1.45.0"
gunicorn = "^23.0.0"
langchain = "^0.3.0"
langchain-community = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
